--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div id="container"></div>
+    <h1>Etch-A-Sketch</h1>
+    <main>
+        <div id="container"></div>
+    </main>
+    
     
 </body>
 <script src="main.js"></script>
